# crypto_trading_bot

./: .gitignore  AGENTS.md  Dockerfile  README.md  backtest.py  bot.py  config.py  main.py  pyproject.toml  requirements.txt  simulate_15m_template.py
backtest/: backtest.py
broker/: broker_sim.py  risk_manager.py
crypto_trading/: backtest.py
crypto_trading/backtest/: spot_backtest.py
crypto_trading/config/: config.py
crypto_trading/indicators/: momentum.py  moving_averages.py
crypto_trading/io/: __init__.py  loader.py
crypto_trading/lifecycle/: __init__.py  spot_lifecycle.py
crypto_trading/ml/: gate_model.py  tp_sl_dataset.py  volatility_dataset.py  (+1 more)
data/: BTCUSDT_15M.csv  ETHUSDT_15M.csv
exchange/: ccxt_exchange.py
indicators/: adx.py  atr.py  bb_atr.py  fvg.py  liquidity.py  ma.py  order_blocks.py  rsi.py  structure.py  supply_demand.py
live/: exchange.py  live_trader.py  logging_utils.py  state.py
models/: tp_sl_gate_btc_15m_24h.joblib  tp_sl_gate_btc_1h.joblib  tp_sl_gate_eth_1h.joblib  vol_gate_btc_15m_24h_1pct.joblib
paper/: broker_sim.py  exchange_ccxt.py  paper_trader.py  risk_manager.py
regimes/: regime_detector.py
risk/: risk_manager.py
scripts/: backtest.py  fetch_candles.py  fetch_mexc.py  fetch_ohlcv.py  mexc_fetch_ohlcv.py  paper_trade.py  simulate_15m_template.py  train.py  train_volatility.py
simulator/: paper_trading.py
strategies/: breakout.py  mean_reversion.py  multi_timeframe.py  smc_signal.py  trend_participation.py
trader/: paper_trader.py
utils/: candle_utils.py  data_loader.py  helpers.py  market_data.py
(+71 files in other folders)
